[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Wizard.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MageRed.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Fireball.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 75.327

[node name="MageRed" type="Node2D"]
position = Vector2( 638.539, 473.925 )
script = ExtResource( 2 )
fireball_prefab = ExtResource( 3 )
initial_fireball_delay = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 1 )

[node name="FireballSpawnPoint" type="Node2D" parent="."]
position = Vector2( -100.927, -35.8093 )

[node name="ClickArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="ClickArea2D" to="." method="_on_ClickArea2D_input_event"]
